# playground

./: AGENTS.md  Cargo.toml  justfile
.github/workflows/: rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: Cargo.toml  build.rs
crates/common/proto/: hello.proto
crates/server/: Cargo.toml
crates/server/migrations/: 20260214000000_init.sql
crates/server/src/: lib.rs  main.rs
crates/testing/: Cargo.toml
crates/testing/src/: harness.rs
crates/testing/tests/: hello_integration.rs
