[workspace]
members = [
    "crates/server",
    "crates/client",
    "crates/cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"
version = "0.1.0"
authors = ["Kevin Stock"]

[workspace.dependencies]
client = { path = "crates/client" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
time = "0.3"
tonic = "0.12"
tracing = "0.1"
uuid = "1"
