[workspace]
members = [
    "crates/common",
    "crates/server",
    "crates/client",
    "crates/cli",
    "crates/testing",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"
version = "0.1.0"
authors = ["Kevin Stock"]

[workspace.dependencies]
client = { path = "crates/client" }
common = { path = "crates/common" }
server = { path = "crates/server" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3"
ratatui = "0.29"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
time = "0.3"
tonic = "0.12"
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1"
