[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
client.workspace = true
tokio.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
