[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
common.workspace = true
sqlx.workspace = true
tokio.workspace = true
time.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
