[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
tonic-build.workspace = true
