[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
client.workspace = true
sqlx.workspace = true
tokio.workspace = true
time.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
