[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
common.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
time.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
