[package]
name = "testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
client.workspace = true
server.workspace = true
tokio.workspace = true
sqlx.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
